# OBDExplorer

./: .gitignore  LICENSE  OBD2Dprojection.py  OBDExplorerPlus.py  OBDGraphExplorerQT.py  OBDGraphWithTieFastplotlib.py  OBDGraphWithTieMatplotlib.py  OBDGraphWithTiePyQTGraph.py  OBDPlots3d.py  OBDPlots4d.py  OBD_data_map.md  OBDexplorer1.py  OBDexplorer2.py  OBDexplorer3.py  OBDgraphExplorer1 swap points lines archive.py  OBDgraphExplorer1.py  OBDinteractiveBinomial.py  OBDplotTiePoints.py  OBDplotTiePoints2.py  OBDsaveSourceData.py  OBDsimpleGraph.py  OBDswapGraph1.py  OBDtSNE.py  OBDtiePointFormulas.py  OBDtiePointsExplorer1.py  README.md  diagnostic_tie_p_method_agreement.py  environment.yml  obd_explorer_qt_ui.py  plot_last_cusp_features.py  plot_n_local_min_tie_points.py  pyproject.toml  requirements.txt  test_exact_tie_point_agreement.py  tie_diagnose_all_last_cusps.py  tie_flat_tol_sensitivity_sweep.py  tie_slope_diagnostic.py
docs/: index.html
log/: tie_points_pairs_verbose_20260430_142037.csv  tie_points_pairs_verbose_20260430_142043.csv  tie_points_pairs_verbose_20260430_152408.csv  tie_points_pairs_verbose_20260430_152516.csv  tie_points_pairs_verbose_20260430_153951.csv  tie_points_pairs_verbose_20260430_154056.csv  tie_points_pairs_verbose_20260430_155435.csv  tie_points_verbose_20260430_140851.csv  tie_points_verbose_20260430_141441.csv  tie_points_verbose_20260430_142037.csv  tie_points_verbose_20260430_145451.csv  tie_points_verbose_20260430_160306.csv  tie_points_verbose_20260430_161946.csv  tie_points_verbose_20260430_234447.csv  (+10 more)
(+26 files in other folders)
